[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "autogen>=0.7.6",
    "fix-busted-json>=0.0.18",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
]
